# amplihack-rs

./: .amplihack-artifact-allowlist  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_RUST.md  Cargo.toml  README.md  TODO.md  mkdocs.yml  package.json  pyproject.toml  requirements-docs.txt  run.sh  rust-toolchain.toml  skills  tsconfig.json
bins/amplihack/: Cargo.toml
bins/amplihack-asset-resolver/: Cargo.toml
bins/amplihack-asset-resolver/src/: main.rs
bins/amplihack-asset-resolver/tests/: usage.rs
bins/amplihack-hooks/: Cargo.toml
bins/amplihack-hooks/src/: main.rs
bins/amplihack-hooks/tests/: signal_subscriber_it.rs
bins/amplihack/src/: main.rs
bins/amplihack/tests/: issue_537_git_optional_recipes.rs
crates/amplihack-agent-core/: Cargo.toml
crates/amplihack-agent-core/src/: action_executor.rs  agent.rs  code_synthesis.rs  continuous_eval.rs  error.rs  flat_retriever_adapter.rs  graph_rag_retriever.rs  hierarchical_memory_local.rs  hierarchical_memory_types.rs  input_events.rs  input_source.rs  intent.rs  json_utils.rs  knowledge_utils.rs  learning_agent.rs  learning_ingestion.rs  lib.rs  lifecycle.rs  memory_export.rs  memory_retrieval.rs  models.rs  partition_routing.rs  prompt_utils.rs  runtime_factory.rs  safe_calc.rs  session.rs  similarity.rs  task_queue.rs
crates/amplihack-agent-core/tests/: agent_test.rs  agentic_loop_test.rs  intent_test.rs  lifecycle_test.rs  session_test.rs  task_queue_test.rs
crates/amplihack-agent-eval/: Cargo.toml
crates/amplihack-agent-eval/src/: agent_adapter.rs  agent_subprocess.rs  compat.rs  distributed_adapter.rs  domain_eval.rs  error.rs  five_agent_experiment.rs  grader.rs  gym.rs  harness.rs  levels.rs  lib.rs  llm_grader.rs  long_horizon.rs  long_horizon_eval.rs  long_horizon_multi_seed.rs  matrix_eval.rs  meta_eval_experiment.rs  metacognition_grader.rs  models.rs  multi_source_collector.rs  progressive.rs  progressive_levels.rs  quiz_generator.rs  run_domain_evals.rs  sdk_eval_loop.rs  self_improve.rs  self_improve_helpers.rs  teaching_eval.rs  teaching_session.rs  teaching_subprocess.rs  tla_prompt_experiment.rs  trace_to_test.rs
crates/amplihack-agent-eval/tests/: grader_test.rs  levels_test.rs  models_test.rs  progressive_test.rs  self_improve_test.rs
crates/amplihack-agent-generator/: Cargo.toml
crates/amplihack-agent-generator/src/: analyzer.rs  assembler.rs  distributor.rs  documentation_generator.rs  error.rs  lib.rs  models.rs  models_tests.rs  packager.rs  planner.rs  repackage_generator.rs  repository_creator.rs  synthesizer.rs  update_manager.rs
crates/amplihack-agent-generator/tests/: analyzer_test.rs  models_test.rs  pipeline_test.rs  planner_test.rs
crates/amplihack-blarify/: Cargo.toml
crates/amplihack-blarify/src/: lib.rs
crates/amplihack-builders/: Cargo.toml
crates/amplihack-builders/src/: export_on_compact.rs  lib.rs
crates/amplihack-builders/tests/: claude_builder.rs  codex_builder.rs  export_on_compact.rs
crates/amplihack-cli/: Cargo.toml  build.rs
crates/amplihack-cli/examples/: bootstrap_claude_plugin.rs
crates/amplihack-cli/src/: auto_mode_append.rs  auto_mode_completion_signals.rs  auto_mode_completion_verifier.rs  auto_mode_state.rs  auto_mode_ui.rs  auto_mode_work_summary.rs  auto_mode_work_summary_generator.rs  auto_stager.rs  auto_update.rs  binary_finder.rs  bootstrap.rs  ci_resource_discipline_tests.rs  claude_plugin.rs  cli_commands.rs  cli_extensions.rs  cli_subcommands.rs  cli_tests.rs  command_error.rs  copilot_setup.rs  docker.rs  env_builder.rs  fleet_local.rs  freshness.rs  health_check.rs  install_output_contract.rs  launcher.rs  launcher_context.rs  lib.rs  memory_config.rs  nesting.rs  path_conflicts.rs  pr_recovery_readiness.rs  remote_cli_tests.rs  resolve_bundle_asset.rs  runtime_assets.rs  rust_trial.rs  self_heal.rs  session_tracker.rs  settings_manager.rs  signals.rs  (+5 more)
crates/amplihack-cli/tests/: active_agent_binary_default_test.rs  auto_mode_prompt_delivery.rs  bugfix_341_install_freshness.rs  bugfix_install_tests.rs  builder_dispatch.rs  cargo_cxx_pin_test.rs  ci_config.rs  cli_driver.rs  doctor_prompt_delivery.rs  install_update_output_contract.rs  issue_439_no_per_step_timeout.rs  issue_439_timeout_removal.rs  issue_449_step_02b_timeout.rs  issue_507_routing_question_passthrough.rs  issue_538_install_completeness.rs  issue_585_copilot_npm_hang.rs  issue_625_update_prompt_subprocess_safe.rs  issue_634_asset_resolution_parity.rs  issue_646_quality_audit_cycle_bugs.rs  issue_672_workflow_reliability_contracts.rs  issue_754_scoped_monitor_contracts.rs  issue_817_runtime_artifact_resolution.rs  issue_820_merge_validations_mixed_output.rs  issue_833_merge_validations_json_tolerance.rs  issue_899_merge_validations_abstention.rs  pr_712_named_asset_canonicalization.rs  pr_recovery_readiness.rs  remote_cli_contract.rs  remote_dispatch.rs  signal_azlin_lister.rs  signal_config_writer.rs  signal_daemon_strategy.rs  signal_distribute_state.rs  signal_endpoint_precedence.rs  signal_error_taxonomy.rs  signal_identity_mode.rs  signal_render.rs  signal_security.rs  signal_setup_idempotency.rs
crates/amplihack-context/: Cargo.toml
crates/amplihack-context/src/: launcher_detector.rs  lib.rs  lsp_detector.rs  migration.rs  mode_detector.rs  path_resolver.rs  strategies.rs
crates/amplihack-delegation/: Cargo.toml
crates/amplihack-domain-agents/: Cargo.toml
crates/amplihack-eval/: Cargo.toml
crates/amplihack-fleet/: Cargo.toml
crates/amplihack-hive/: Cargo.toml
crates/amplihack-hooks/: AGENTS.md  Cargo.toml
crates/amplihack-launcher/: Cargo.toml
crates/amplihack-memory/: Cargo.toml
crates/amplihack-multilspy/: Cargo.toml
crates/amplihack-orchestration/: Cargo.toml
crates/amplihack-recipe/: Cargo.toml
crates/amplihack-recovery/: Cargo.toml
crates/amplihack-reflection/: Cargo.toml
crates/amplihack-remote/: Cargo.toml
crates/amplihack-safety/: Cargo.toml
crates/amplihack-security/: Cargo.toml
crates/amplihack-session/: Cargo.toml
crates/amplihack-signal/: Cargo.toml
(+3272 files in other folders)
