[workspace]
resolver = "2"
members = [
    "crates/amplihack-types",
    "crates/amplihack-state",
    "crates/amplihack-hooks",
    "crates/amplihack-cli",
    "bins/amplihack",
    "bins/amplihack-hooks",
]

[workspace.package]
version = "0.3.7"
edition = "2024"
license = "MIT"
repository = "https://github.com/rysweet/amplihack-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tempfile = "3"
shell-words = "1"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
sha2 = "0.10"
libc = "0.2"
# SEC-WS4-01: Exact pin prevents cargo update from pulling versions that break
# kuzu's C++ FFI ABI. Do NOT change to a range specifier (e.g. "^1.0.138").
cxx-build = "=1.0.138"

# Workspace crate cross-references
amplihack-types = { path = "crates/amplihack-types" }
amplihack-state = { path = "crates/amplihack-state" }
amplihack-hooks = { path = "crates/amplihack-hooks" }
amplihack-cli = { path = "crates/amplihack-cli" }

[profile.release]
lto = true
strip = true
panic = "unwind"
codegen-units = 1
