[workspace]
resolver = "2"
members = [
    "crates/amplihack-types",
    "crates/amplihack-state",
    "crates/amplihack-security",
    "crates/amplihack-workflows",
    "crates/amplihack-hooks",
    "crates/amplihack-cli",
    "crates/amplihack-fleet",
    "crates/amplihack-memory",
    "crates/amplihack-launcher",
    "crates/amplihack-recipe",
    "crates/amplihack-safety",
    "crates/amplihack-context",
    "bins/amplihack",
    "bins/amplihack-asset-resolver",
    "bins/amplihack-hooks",
]

[workspace.package]
version = "0.6.4"
edition = "2024"
license = "MIT"
repository = "https://github.com/rysweet/amplihack-rs"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tempfile = "3"
shell-words = "1"
clap = { version = "4", features = ["derive"] }
signal-hook = "0.3"
sha2 = "0.10"
libc = "0.2"
lru = "0.12"
# SEC-WS4-01: Exact pin prevents cargo update from pulling versions that break
# kuzu's C++ FFI ABI. Do NOT change to a range specifier (e.g. "^1.0.138").
cxx-build = "=1.0.138"

# Workspace crate cross-references
amplihack-types = { path = "crates/amplihack-types" }
amplihack-state = { path = "crates/amplihack-state" }
amplihack-security = { path = "crates/amplihack-security" }
amplihack-workflows = { path = "crates/amplihack-workflows" }
amplihack-hooks = { path = "crates/amplihack-hooks" }
amplihack-cli = { path = "crates/amplihack-cli" }
amplihack-fleet = { path = "crates/amplihack-fleet" }
amplihack-memory = { path = "crates/amplihack-memory" }
amplihack-launcher = { path = "crates/amplihack-launcher" }
amplihack-recipe = { path = "crates/amplihack-recipe" }
amplihack-safety = { path = "crates/amplihack-safety" }

[profile.release]
lto = true
strip = true
panic = "unwind"
codegen-units = 1
