[package]
name = "amplihack-hooks-bin"
description = "Multicall hook binary for amplihack"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "amplihack-hooks"
path = "src/main.rs"

[dependencies]
amplihack-types = { workspace = true }
amplihack-state = { workspace = true }
amplihack-hooks = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }

[[test]]
name = "hook_dispatch"
path = "../../tests/integration/hook_dispatch_test.rs"

[[test]]
name = "hook_aliases"
path = "../../tests/integration/hook_aliases_test.rs"
