[package]
name = "amplihack"
description = "CLI binary for amplihack"
version.workspace = true
edition.workspace = true
license.workspace = true

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[[bin]]
name = "amplihack"
path = "src/main.rs"

[dependencies]
amplihack-types = { workspace = true }
amplihack-state = { workspace = true }
amplihack-hooks = { workspace = true }
amplihack-cli = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }

[[test]]
name = "cli_launch"
path = "../../tests/integration/cli_launch_test.rs"

[[test]]
name = "cargo_lock_cxx_consistency"
path = "../../tests/integration/cargo_lock_cxx_consistency_test.rs"

# WS1: CI cxx-build pin assertion structural tests
[[test]]
name = "ci_cxx_build_pin"
path = "../../tests/integration/ci_cxx_build_pin_test.rs"

# WS3: Recipe runner E2E integration tests
# These tests verify the full recipe delegation chain:
#   amplihack recipe list / validate / run --dry-run
# Tests recipe_run_dry_run_* FAIL until recipe-runner-rs is installed.
[[test]]
name = "recipe_e2e"
path = "../../tests/integration/recipe_e2e_test.rs"

# Issue #77 AC9: no-Python probe integration tests (TC-04 through TC-07).
# These tests verify that index-code, index-scip, and query-code subcommands
# work correctly in a Python-free environment.
# Tests tc04-tc07 FAIL until the probe script extension is implemented.
[[test]]
name = "no_python_probe"
path = "../../tests/integration/no_python_probe_test.rs"

# Issue #78 / v0.5.0: Fleet local dashboard probe tests (TC-09 through TC-12).
# These tests validate the local session management dashboard:
#   TC-09: fleet --help exits 0
#   TC-10: no crash on empty locks directory
#   TC-11: FleetDashboardSummary JSON schema roundtrip
#   TC-12: run_fleet_dashboard(None) completes inline without spawning threads
# Tests TC-10 and TC-12 FAIL until fleet_local implementation is complete.
[[test]]
name = "fleet_probe"
path = "../../tests/integration/fleet_probe.rs"

# Issue #77 pre-merge security hygiene tests (TC-SEC-01 through TC-SEC-24).
# These TDD tests define the security contract for the fleet module and drive
# the four PENDING pre-merge checklist items:
#   TC-SEC-01:    Cargo.lock present for `cargo audit`
#   TC-SEC-02–04: No `Command::new("sh")` / `sh -c` patterns
#   TC-SEC-05–07: tempfile::persist() produces 0o600 files (umask-independent)
#   TC-SEC-08–14: CLI session-ID and VM-name args validated against allowlist
#   TC-SEC-15–19: shell_single_quote escaping contract
#   TC-SEC-20:    No hardcoded high-entropy secrets in source
#   TC-SEC-21–22: Error messages do not expose absolute filesystem paths
#   TC-SEC-23:    No wildcard version specifiers in Cargo.toml
#   TC-SEC-24:    kill(PID) built from numeric type, not user string
#
# Tests TC-SEC-07 and TC-SEC-08–14 FAIL until the corresponding implementation
# work (persist-site annotations, CLI-level input validation) is complete.
[[test]]
name = "security_hygiene"
path = "../../tests/integration/security_hygiene_test.rs"

[[test]]
name = "kuzu_path_notice"
path = "../../tests/integration/kuzu_path_notice_test.rs"

[[test]]
name = "cli_golden"
path = "../../tests/integration/cli_golden_tests.rs"

# Issue #342: Targeting existing PR branch via context (existing_branch / pr_number).
# Verifies step-04-setup-worktree (default-workflow.yaml) and step3-setup-worktree
# (consensus-workflow.yaml) skip branch creation when an existing branch is supplied,
# resolve pr_number via `gh`, validate inputs against shell/path injection, and
# preserve byte-identical legacy behaviour when both vars are empty.
[[test]]
name = "existing_branch_context"
path = "../../tests/integration/existing_branch_context_test.rs"

# Issue #259: Documentation-vs-code drift detection tests.
# Verify docs match source code for flag injection, completions,
# memory index output format, and all new reference docs.
[[test]]
name = "doc_code_drift"
path = "../../tests/integration/doc_code_drift_test.rs"

# Issue #248: Native `amplihack orch run <WS_FILE>` regression test.
# Verifies the subcommand is wired into clap and short-circuits cleanly on an
# empty workstreams JSON array (matches multitask::run_multitask semantics).
[[test]]
name = "orch_run_cli"
path = "../../tests/integration/orch_run_cli_test.rs"

# Issues #248 / #285: sdk-comparison.yaml graceful skip when the optional
# `amplihack.eval.sdk_eval_loop` Python module is unavailable. TDD tests
# specifying the contract for the graceful-skip refactor.
[[test]]
name = "sdk_comparison_optional_python"
path = "../../tests/integration/sdk_comparison_optional_python_test.rs"

# Issue #248 / PR #348: self-improvement-loop.yaml graceful-skip contract.
# TDD regression tests pinning the probe-then-skip behaviour for the optional
# `amplihack.eval.progressive_test_suite` Python module across both eval steps
# (run-baseline-eval, re-eval-affected) and auditing that no bare unprobed
# python eval invocations remain in amplifier-bundle/recipes/.
[[test]]
name = "self_improvement_loop_skip"
path = "../../tests/integration/self_improvement_loop_skip_test.rs"
