[package]
name = "amplihack"
description = "CLI binary for amplihack"
version.workspace = true
edition.workspace = true
license.workspace = true
default-run = "amplihack"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }.tar.gz"
bin-dir = "{ bin }{ binary-ext }"
pkg-fmt = "tgz"
disabled-strategies = ["quick-install", "compile"]

[[bin]]
name = "amplihack"
path = "src/main.rs"

[[bin]]
name = "scan-invisible-chars"
path = "src/bin/scan_invisible_chars.rs"

[dependencies]
amplihack-types = { workspace = true }
amplihack-state = { workspace = true }
amplihack-hooks = { workspace = true }
amplihack-cli = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }

[dev-dependencies]
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tempfile = { workspace = true }
libc = { workspace = true }
regex = { workspace = true }
shell-words = { workspace = true }
base64 = "0.22"

[[test]]
name = "investigation_workflow_decomposition"
path = "../../tests/integration/investigation_workflow_decomposition_test.rs"

[[test]]
name = "smart_orchestrator_decomposition"
path = "../../tests/integration/smart_orchestrator_decomposition_test.rs"

[[test]]
name = "automated_action_failure_investigation_contract"
path = "../../tests/integration/automated_action_failure_investigation_contract_test.rs"

[[test]]
name = "cli_launch"
path = "../../tests/integration/cli_launch_test.rs"

[[test]]
name = "cargo_lock_cxx_consistency"
path = "../../tests/integration/cargo_lock_cxx_consistency_test.rs"

# WS1: CI cxx-build pin assertion structural tests
[[test]]
name = "ci_cxx_build_pin"
path = "../../tests/integration/ci_cxx_build_pin_test.rs"

# Issue #744: CI speed-up + robustness contract (toolchain pin, nextest +
# doctests, CARGO_PROFILE_TEST_DEBUG=0, SHA-pinned free-disk-space, cache
# save-if main-only). Structural — reads ci.yml / rust-toolchain.toml only.
[[test]]
name = "ci_speedup_optimization"
path = "../../tests/integration/ci_speedup_optimization_test.rs"

# Issue #744: integration-test binary-path robustness contract. Fragile tests
# must resolve the binary via env!(CARGO_BIN_EXE_*) instead of hand-rolled
# target/debug paths, and the orphan skip-update-check test must be wired.
[[test]]
name = "test_harness_binary_path_contract"
path = "../../tests/integration/test_harness_binary_path_contract_test.rs"

# Issue #744: previously an orphan file (never compiled/run in CI). Wiring it
# as a [[test]] target both runs its assertions and makes CARGO_BIN_EXE_amplihack
# resolve for it, so it can locate the binary robustly.
[[test]]
name = "skip_update_check_flag"
path = "../../tests/integration/skip_update_check_flag_test.rs"

# WS3: Recipe runner E2E integration tests
# These tests verify the full recipe delegation chain:
#   amplihack recipe list / validate / run --dry-run
# Tests recipe_run_dry_run_* FAIL until recipe-runner-rs is installed.
[[test]]
name = "recipe_e2e"
path = "../../tests/integration/recipe_e2e_test.rs"

# Issue #77 AC9: no-Python probe integration tests (TC-04 through TC-07).
# These tests verify that index-code, index-scip, and query-code subcommands
# work correctly in a Python-free environment.
# Tests tc04-tc07 FAIL until the probe script extension is implemented.
[[test]]
name = "no_python_probe"
path = "../../tests/integration/no_python_probe_test.rs"

# Default-workflow decomposition parity tests.
# Locks the v3 contract: composer calls 9 phase sub-recipes, every original
# step ID is preserved in order, no duplicates, every brick stays under 400
# LOC, and mandatory steps (0/14/17/18) remain present. Pure structural,
# no recipe-runner needed.
[[test]]
name = "default_workflow_decomposition"
path = "../../tests/integration/default_workflow_decomposition_test.rs"

# Issue #615: agentic work-verifier contract tests.
# Locks the behavioral contract for the step-08c pair that replaced the
# legacy six-escape-hatch bash hollow-success guard. Asserts (a) the agent
# step's type/wiring/prompt content (investigation surfaces, fast-path
# opt-outs, three verdicts, JSON-on-last-line), (b) the bash gate's
# type/wiring, (c) condition-clause preservation, and (d) executes the
# actual gate command against synthetic verdicts to lock the exit-code
# mapping (WORK_VERIFIED->0, INSUFFICIENT_EVIDENCE->0+WARN, HOLLOW_SUCCESS->1,
# empty/unparseable->0+WARN, ALLOW_NO_OP->0, sentinel->0).
[[test]]
name = "issue_615_work_verifier"
path = "../../tests/integration/issue_615_work_verifier_test.rs"

[[test]]
name = "workflow_prep_git_recovery"
path = "../../tests/integration/workflow_prep_git_recovery_test.rs"

[[test]]
name = "version_contract"
path = "../../tests/integration/version_contract_test.rs"

[[test]]
name = "workflow_publish_pr_metadata"
path = "../../tests/integration/workflow_publish_pr_metadata_test.rs"

[[test]]
name = "workflow_publish_resilience"
path = "../../tests/integration/workflow_publish_resilience.rs"

[[test]]
name = "workflow_publish_azdo_contract"
path = "../../tests/integration/workflow_publish_azdo_contract_test.rs"

[[test]]
name = "default_workflow_terminal_state"
path = "../../tests/integration/default_workflow_terminal_state.rs"

[[test]]
name = "workflow_publish_terminal_gate"
path = "../../tests/integration/workflow_publish_terminal_gate.rs"

[[test]]
name = "workflow_finalize_terminal_state"
path = "../../tests/integration/workflow_finalize_terminal_state.rs"

[[test]]
name = "workflow_finalize_resilience"
path = "../../tests/integration/workflow_finalize_resilience.rs"

[[test]]
name = "issue_808_finalization_cleanup"
path = "../../tests/integration/issue_808_finalization_cleanup.rs"

[[test]]
name = "hygiene_cleanup"
path = "../../tests/integration/hygiene_cleanup.rs"

# Issue #755: Artifact Guard CLI, workflow, and pre-commit contracts.
[[test]]
name = "artifact_guard_cli"
path = "../../tests/integration/artifact_guard_cli_tests.rs"

[[test]]
name = "artifact_guard_workflow"
path = "../../tests/integration/artifact_guard_workflow_tests.rs"

[[test]]
name = "pre_commit_artifact_guard"
path = "../../tests/integration/pre_commit_artifact_guard_tests.rs"

[[test]]
name = "doctor_node_remediation"
path = "../../tests/integration/doctor_node_remediation_test.rs"
# Consensus-workflow decomposition parity tests.
# Locks the v3 contract: composer calls 11 phase sub-recipes, all 60 step IDs
# preserved in order, brick budget enforced, and 7 mandatory consensus gates
# (requirements/design debates, N-version vote, refactor/PR/philosophy/final
# panels) remain present.
[[test]]
name = "consensus_workflow_decomposition"
path = "../../tests/integration/consensus_workflow_decomposition_test.rs"

# Issue #78 / v0.5.0: Fleet local dashboard probe tests (TC-09 through TC-12).
# These tests validate the local session management dashboard:
#   TC-09: fleet --help exits 0
#   TC-10: no crash on empty locks directory
#   TC-11: FleetDashboardSummary JSON schema roundtrip
#   TC-12: run_fleet_dashboard(None) completes inline without spawning threads
# Tests TC-10 and TC-12 FAIL until fleet_local implementation is complete.
[[test]]
name = "fleet_probe"
path = "../../tests/integration/fleet_probe.rs"

# Issue #77 pre-merge security hygiene tests (TC-SEC-01 through TC-SEC-24).
# These TDD tests define the security contract for the fleet module and drive
# the four PENDING pre-merge checklist items:
#   TC-SEC-01:    Cargo.lock present for `cargo audit`
#   TC-SEC-02–04: No `Command::new("sh")` / `sh -c` patterns
#   TC-SEC-05–07: tempfile::persist() produces 0o600 files (umask-independent)
#   TC-SEC-08–14: CLI session-ID and VM-name args validated against allowlist
#   TC-SEC-15–19: shell_single_quote escaping contract
#   TC-SEC-20:    No hardcoded high-entropy secrets in source
#   TC-SEC-21–22: Error messages do not expose absolute filesystem paths
#   TC-SEC-23:    No wildcard version specifiers in Cargo.toml
#   TC-SEC-24:    kill(PID) built from numeric type, not user string
#
# Tests TC-SEC-07 and TC-SEC-08–14 FAIL until the corresponding implementation
# work (persist-site annotations, CLI-level input validation) is complete.
[[test]]
name = "security_hygiene"
path = "../../tests/integration/security_hygiene_test.rs"

[[test]]
name = "kuzu_path_notice"
path = "../../tests/integration/kuzu_path_notice_test.rs"

[[test]]
name = "cli_golden"
path = "../../tests/integration/cli_golden_tests.rs"

# Issue #342: Targeting existing PR branch via context (existing_branch / pr_number).
# Verifies step-04-setup-worktree (default-workflow.yaml) and step3-setup-worktree
# (consensus-workflow.yaml) skip branch creation when an existing branch is supplied,
# resolve pr_number via `gh`, validate inputs against shell/path injection, and
# preserve byte-identical legacy behaviour when both vars are empty.
# Issue #453: skip_pre_agent_validation context variable TDD tests.
# Verifies the context variable is declared in smart-orchestrator.yaml and
# default-workflow.yaml with string "true" default, forwarded through
# smart-execute-routing.yaml, and guarded in workflow-prep.yaml step-01.
[[test]]
name = "skip_pre_agent_validation_context"
path = "../../tests/integration/skip_pre_agent_validation_context_test.rs"

[[test]]
name = "existing_branch_context"
path = "../../tests/integration/existing_branch_context_test.rs"

# Issue #259: Documentation-vs-code drift detection tests.
# Verify docs match source code for flag injection, completions,
# memory index output format, and all new reference docs.
[[test]]
name = "doc_code_drift"
path = "../../tests/integration/doc_code_drift_test.rs"

# PR #579 recovery readiness contract: exact-head no-op gating, hook readiness,
# and additive-copy safety. TDD red until pr_recovery_readiness lands.
[[test]]
name = "pr_recovery_readiness_contract"
path = "../../tests/integration/pr_recovery_readiness_contract_test.rs"

# Issue #420 Doc Parity Batch E: hive-mind documentation port.
# Verifies the four ported docs (tutorials/getting-started, tutorials/tutorial,
# concepts/design, concepts/eval) exist at kebab-case Diataxis paths, are
# linked from docs/index.md, reference only real amplihack-hive symbols
# (no fabricated APIs), use `amplihack hive` CLI calls (not Python), and
# reference the `lbug` graph backend (not `kuzu`).
[[test]]
name = "hive_mind_doc_parity"
path = "../../tests/integration/hive_mind_doc_parity_test.rs"

# Issue #248: Native `amplihack orch run <WS_FILE>` regression test.
# Verifies the subcommand is wired into clap and short-circuits cleanly on an
# empty workstreams JSON array (matches multitask::run_multitask semantics).
[[test]]
name = "orch_run_cli"
path = "../../tests/integration/orch_run_cli_test.rs"

# sdk-comparison.yaml graceful skip when the native SDK eval runner is unavailable.
[[test]]
name = "sdk_comparison_optional_python"
path = "../../tests/integration/sdk_comparison_optional_python_test.rs"

# self-improvement-loop.yaml graceful-skip contract for native eval runner absence.
[[test]]
name = "self_improvement_loop_skip"
path = "../../tests/integration/self_improvement_loop_skip_test.rs"

# Issue #435: docs/discoveries.md rolling log.
# Verifies the file exists, follows the prescribed format (title, archive
# policy, entry format guide, category tags, dated seed entry, ToC), and
# is linked from docs/index.md under Contributing.
[[test]]
name = "discoveries_doc"
path = "../../tests/integration/discoveries_doc_test.rs"

# Issue #434: Gherkin v2 experiment disposition investigation.
# Verifies investigation doc structure, index.md linkage, and regression guards
# ensuring gherkin-expert skill/agent/allowlist entry remain present.
[[test]]
name = "gherkin_investigation_doc"
path = "../../tests/integration/gherkin_investigation_doc_test.rs"

[[test]]
name = "issue_537_git_optional_recipes"
path = "tests/issue_537_git_optional_recipes.rs"

# Issue #592: Skill frontmatter name validation.
# Ensures all SKILL.md `name:` fields match ^[a-z0-9-]+$ (no colons).
# Regression guard for amplihack:migrate → amplihack-migrate fix.
[[test]]
name = "skill_frontmatter_name"
path = "../../tests/integration/skill_frontmatter_name_test.rs"

# QA-022: Formal specification for multitask orchestrator refactoring.
[[test]]
name = "multitask_orchestrator_spec"
path = "../../tests/integration/multitask_orchestrator_spec_test.rs"

# Issue #799: deterministic metadata-only workflow-log inventory helper.
[[test]]
name = "orch_workflow_log_inventory"
path = "../../tests/integration/orch_workflow_log_inventory_test.rs"

# Issue #801: generated workflow requirements must omit saved preference notices.
[[test]]
name = "workflow_prep_requirements_sanitizer"
path = "../../tests/integration/workflow_prep_requirements_sanitizer_test.rs"

# Issues #599–#608: Repo-sweep regression tests.
# Guards against re-introduction of stale refs, broken links, missing feature gates.
[[test]]
name = "repo_sweep_issues_599_608"
path = "../../tests/integration/repo_sweep_issues_599_608_test.rs"

# Issue #605: GitHubDistributor TDD tests.
# Defines the contract for the fixed GitHubDistributor implementation.
# Tests FAIL against the feature-gated stubs and PASS after applying the
# implementation (UTF-8 truncation, base64 crate, temp file push, SHA
# idempotency, visibility parameter).
[[test]]
name = "github_distributor_tdd"
path = "../../tests/integration/github_distributor_tdd_test.rs"

# Issues #655/#656: SKILL.md stale Python instructions + git fetch resilience.
# #655 tests PASS (SKILL.md already fixed). #656 tests FAIL (TDD red) until
# workflow-prep.yaml step-01 breaks git fetch out of the &&-chain.
[[test]]
name = "issue_655_656_skill_fetch_resilience"
path = "../../tests/integration/issue_655_656_skill_fetch_resilience_test.rs"

[[test]]
name = "p1_workflow_reliability"
path = "../../tests/integration/p1_workflow_reliability_test.rs"

# Issue #661: Scan SKILL.md files for stale Python recipe-runner patterns.
# Prevents re-introduction of run_recipe_by_name, python3 -c recipe, etc.
[[test]]
name = "no_stale_python_patterns"
path = "../../tests/integration/no_stale_python_patterns_test.rs"

# Issue #746: Default workflow guidance must point to skills/recipes, not
# stale DEFAULT_WORKFLOW.md or UltraThink-era canonical instructions.
[[test]]
name = "issue_746_default_workflow_guidance"
path = "../../tests/integration/issue_746_default_workflow_guidance_test.rs"

# Issue #684: Host-aware workflow steps (commit refs, PR body, summary, percent-decode).
# TDD-RED tests — fail until implementation lands across 4 recipe files.
[[test]]
name = "issue_684_host_aware_workflow"
path = "../../tests/integration/issue_684_host_aware_workflow_test.rs"

# Issues #815/#804: default-workflow local tracking issue-number extraction.
# step-03b must accept hash-based `local-<hash>` references (propagate them),
# never surface a bare number for a local fallback, and never abort the workflow.
[[test]]
name = "issue_815_804_local_tracking_extract"
path = "../../tests/integration/issue_815_804_local_tracking_extract_test.rs"

# Issues #815/#804: downstream PR-scope consumers (pr_ready, final_status) must
# coerce a non-numeric local tracking issue_number to empty before scope matching.
[[test]]
name = "issue_815_804_local_tracking_scope_args"
path = "../../tests/integration/issue_815_804_local_tracking_scope_args_test.rs"

# Issue #778: merge-ready must be platform-neutral, with explicit GitHub and
# Azure DevOps/AzDO guidance for every merge-readiness aspect.
[[test]]
name = "merge_ready_platform_contract"
path = "../../tests/integration/merge_ready_platform_contract_test.rs"

# code-philosophy-audit recipe structural parity tests.
[[test]]
name = "code_philosophy_audit_recipe"
path = "../../tests/integration/code_philosophy_audit_recipe_test.rs"

# Issue #849: default-workflow SKILL mirror parity + F-ERR-2 stale-citation guard.
# Pins byte-for-byte mirror equality, the extracted Step 17a gate node, absence of
# the stale `default-workflow.yaml:961` reference, and that the audit citations
# resolve to a live `step-17a-testing-evidence-gate` step in workflow-pr-review.yaml.
[[test]]
name = "issue_849_skill_mirror_citation"
path = "../../tests/integration/issue_849_skill_mirror_citation_test.rs"

# Issue #934: Code Atlas DOT render loop must only render layers that ship a
# `<layer>.dot` file. Guards against re-introducing the Mermaid-only
# `user-journeys` layer (which has no .dot and made `dot` exit 2 on every push).
[[test]]
name = "issue_934_atlas_dot_render"
path = "../../tests/integration/issue_934_atlas_dot_render_test.rs"
