[package]
name = "amplihack-agent-core"
description = "Agent lifecycle, session management, and OODA loop for amplihack"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
amplihack-memory = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true }
