[package]
name = "amplihack-blarify"
version.workspace = true
edition.workspace = true
description = "Code-graph analysis engine for navigable entity-relationship graphs"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
regex.workspace = true
sha2.workspace = true

[dev-dependencies]
tempfile.workspace = true
