[package]
name = "amplihack-builders"
version.workspace = true
edition.workspace = true
description = "Transcript builders for Claude/Codex sessions with export-on-compact"
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
