[package]
name = "amplihack-cli"
description = "CLI command parsing, launcher, and process management for amplihack"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
doctest = false

[dependencies]
amplihack-types = { workspace = true }
amplihack-state = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
clap_complete = "4"
flate2 = "1"
libc = { workspace = true }
semver = "1"
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
signal-hook = { workspace = true }
tar = "0.4"
tempfile = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sha2 = { workspace = true }
ureq = { version = "2", features = ["json"] }
kuzu = { version = "0.11.3" }
rusqlite = { version = "0.38.0", features = ["bundled"] }

[dev-dependencies]
tempfile = { workspace = true }
anyhow = { workspace = true }

[[test]]
name = "kuzu_ffi"
path = "../../tests/integration/kuzu_ffi_test.rs"

[[test]]
name = "ci_config"
path = "tests/ci_config.rs"
